--- a/studentforum/templates/main_template.html
+++ b/studentforum/templates/main_template.html
@@ -1,4 +1,4 @@
-{% extends 'base_tempate.html' %}
+{% extends 'base_template.html' %}
 
 {% block body %}
 
@@ -6,7 +6,7 @@
 <div class="header">
     <div class="header-top">
         {% load static%}
-        <img src="{% static '/img/logo.png' %}" class="logo-img" alt="Логотип">
+        <img src="{% static '/img/logo.jpg' %}" class="logo-img" alt="Логотип">
         <p class="logo-text">
             Сайт для абитуриентов Института нефтепереработки и нефтехимии ФГБОУ ВО УГНТУ в г. Салават
         </p>
@@ -14,53 +14,13 @@
     <div class="header-img">
     </div>
     <div class="header-bottom">
-        <div class="button-login">Войти</div>
+        <div class="button button-login">Войти</div>
     </div>
 </div>
 {% endblock %}
 
 {% block main %}
-<div class="main">
 
-    {% block content %}
-    
-    {% block sidebar %}
-    <div class="main-right">
-        <div class="menu">
-            <h1 class="menu-header">
-                Меню сайта
-            </h1>
-            <ul class="menu-list">
-                <a href="/index.html" class="menu-item-link">
-                    <li class="menu-item">
-                        Новости
-                    </li>
-                </a>
-                <a href="/cafedra.html" class="menu-item-link">
-                    <li class="menu-item">
-                        Кафедры
-                    </li>
-                </a>
-                <a href="/entry.html" class="menu-item-link">
-                    <li class="menu-item">
-                        Поступление
-                    </li>
-                </a>
-                <a href="#" class="menu-item-link">
-                    <li class="menu-item">
-                        Cтуденческие возможности
-                    </li>
-                </a>
-                <a href="#" class="menu-item-link">
-                    <li class="menu-item">
-                        Страница 5
-                    </li>
-                </a>
-            </ul>
-        </div>
-    </div>
-    {% endblock %}
-</div>
 {% endblock %}
 
 {% block footer %}
