--- a/studentforum/static/css/main.css
+++ b/studentforum/static/css/main.css
@@ -3,6 +3,27 @@ body {
     margin: 0;
 }
 
+.button {
+    background-color: #b1c9e9;
+    margin: 0px 30px;
+    text-align: center;
+    font: 500 16px/30px "Montserrat";
+    color: black;
+    border-radius: 10px;
+    border: 3px solid #b1c9e9;
+}
+
+.button:hover {
+    border: 3px solid black;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.button:active {
+    border: 3px solid #b1c9e9;
+    border-radius: 10px;
+}
+
 .header {
     width: 100%;
     height: 370px;
@@ -54,24 +75,6 @@ body {
 .button-login {
     width: 80px;
     height: 30px;
-    background-color: #b1c9e9;
-    margin: 0px 30px;
-    text-align: center;
-    font: 500 16px/30px "Montserrat";
-    color: black;
-    border-radius: 10px;
-    border: 3px solid #b1c9e9;
-}
-
-.button-login:hover {
-    border: 3px solid black;
-    border-radius: 10px;
-    cursor: pointer;
-}
-
-.button-login:active {
-    border: 3px solid #b1c9e9;
-    border-radius: 10px;
 }
 
 .main {
@@ -151,4 +154,31 @@ body {
     align-items: center;
     justify-content: center;
     font: 500 14px/14px "Montserrat";
+}
+
+.login-form {
+    width: 100%;
+    min-height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-form-form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border: 4px solid #004581;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.login-form-name {
+    display: flex;
+    flex-direction: row;
+}
+
+.login-form-password {
+    display: flex;
+    flex-direction: row;
 }
