--- a/studentforum/static/css/main.css
+++ b/studentforum/static/css/main.css
@@ -50,7 +50,7 @@ body {
 }
 
 .header-img {
-    background-image: url("./img/background-header.png");
+    background-image: url("../img/background-header.png");
     background-size: 33% 100%;
     height: 250px;
 }
@@ -157,7 +157,6 @@ body {
 }
 
 .login-form {
-    width: 100%;
     min-height: 500px;
     display: flex;
     align-items: center;
@@ -165,20 +164,49 @@ body {
 }
 
 .login-form-form {
+    width: 350px;
     display: flex;
     align-items: center;
     flex-direction: column;
     border: 4px solid #004581;
     border-radius: 5px;
     padding: 10px;
+    font: 500 14px/14px "Montserrat";
 }
 
 .login-form-name {
+    width: 100%;
+    margin: 10px 0;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+}
+
+.login-form-name > input {
+    width: 200px;
+    font: 500 14px/14px "Montserrat";
 }
 
 .login-form-password {
+    width: 100%;
+    margin: 10px 0;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+}
+
+.login-form-password > input {
+    width: 200px;
+}
+
+.login-form-submit {
+    margin: 5px 0;
+}
+
+.login-form-reg {
+    margin: 5px 0;
+}
+
+.login-form-text {
+    margin: 5px 0;
 }
