--- a/studentforum/templates/main_template.html
+++ b/studentforum/templates/main_template.html
@@ -14,7 +14,7 @@
     <div class="header-img">
     </div>
     <div class="header-bottom">
-        <div class="button button-login">Войти</div>
+        <a href="/accounts/login"><div class="button button-login">Войти</div></a> 
     </div>
 </div>
 {% endblock %}
