--- a/studentforum/templates/registration/login.html
+++ b/studentforum/templates/registration/login.html
@@ -19,7 +19,7 @@
             {{ form.password }}
         </div>
         <input class="button login-form-submit" type="submit" value="Войти">
-        <p class="login-form-reg">Нет аккаунта? <a href="">Зарегистрируйтесь</a></p>
+        <p class="login-form-reg">Нет аккаунта? <a href="{% url 'reg' %}">Зарегистрируйтесь</a></p>
     </form>
 </div>
 
