--- a/studentforum/templates/page_template.html
+++ b/studentforum/templates/page_template.html
@@ -13,14 +13,14 @@
                 Меню сайта
             </h1>
             <ul class="menu-list">
-                <a href="/index.html" class="menu-item-link">
+                <a href="/main" class="menu-item-link">
                     <li class="menu-item">
                         Новости
                     </li>
                 </a>
-                <a href="/cafedra.html" class="menu-item-link">
+                <a href="/main/question" class="menu-item-link">
                     <li class="menu-item">
-                        Кафедры
+                        Задать вопрос
                     </li>
                 </a>
                 <a href="/entry.html" class="menu-item-link">
