--- a/studentforum/templates/page_template.html
+++ b/studentforum/templates/page_template.html
@@ -15,7 +15,7 @@
             <ul class="menu-list">
                 <a href="/main" class="menu-item-link">
                     <li class="menu-item">
-                        Новости
+                        Главная
                     </li>
                 </a>
                 <a href="/main/question" class="menu-item-link">
@@ -23,9 +23,9 @@
                         Задать вопрос
                     </li>
                 </a>
-                <a href="/entry.html" class="menu-item-link">
+                <a href="/main/cafedra" class="menu-item-link">
                     <li class="menu-item">
-                        Поступление
+                        Кафедры
                     </li>
                 </a>
                 <a href="#" class="menu-item-link">
