--- a/studentforum/templates/page_template.html
+++ b/studentforum/templates/page_template.html
@@ -18,24 +18,19 @@
                         Главная
                     </li>
                 </a>
-                <a href="/main/question" class="menu-item-link">
+                <a href="/main/reqs" class="menu-item-link">
                     <li class="menu-item">
-                        Задать вопрос
-                    </li>
-                </a>
-                <a href="/main/cafedra" class="menu-item-link">
-                    <li class="menu-item">
-                        Кафедры
+                        Заявки
                     </li>
                 </a>
                 <a href="#" class="menu-item-link">
                     <li class="menu-item">
-                        Cтуденческие возможности
+                        2
                     </li>
                 </a>
                 <a href="#" class="menu-item-link">
                     <li class="menu-item">
-                        Страница 5
+                        3
                     </li>
                 </a>
             </ul>
