--- a/studentforum/templates/page_template.html
+++ b/studentforum/templates/page_template.html
@@ -18,9 +18,9 @@
                         Главная
                     </li>
                 </a>
-                <a href="/main/reqs" class="menu-item-link">
+                <a href="/main/newreqs" class="menu-item-link">
                     <li class="menu-item">
-                        Заявки
+                        Новые заявки
                     </li>
                 </a>
                 <a href="#" class="menu-item-link">
