--- a/studentforum/templates/req/new_list.html
+++ b/studentforum/templates/req/new_list.html
@@ -1,20 +1,7 @@
-{% extends "page_template.html" %}
-{% block content %}
-<div class="main-left">
+{% extends "req/list.html" %}
+{% block list_header %}
     <h1 class="main-header">Свежие заявки</h1>
-    {% if req_list %}
-    <div>
-        {% for req in req_list %}
-        <div>
-            <span>Номер студенческого: {{ req.student.number }}</span>
-            <span>Фамилия и Имя: {{req.student.first_name}} {{req.student.surname}}</span>
-            <span>Группа: {{req.student.group.name}} </span>
-            <span><a href="{{req.get_absolute_url}}">Рассмотреть</a></span>
-        </div>
-        {% endfor %}
-    </div>
-    {% else %}
+{% endblock %}
+{% block list_footer%}
     <p class="main-text">Новых заявок нет!</p>
-    {% endif %}
-</div>
 {% endblock %}
