--- a/studentforum/templates/registration/login.html
+++ b/studentforum/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends 'main_template.html' %}
 
-{% block main %}
+{% block auth %}
 
 <div class="login-form">
     <form class="login-form-form" method="POST" action="">
