--- a/studentforum/templates/main_template.html
+++ b/studentforum/templates/main_template.html
@@ -8,7 +8,7 @@
         {% load static%}
         <img src="{% static '/img/logo.jpg' %}" class="logo-img" alt="Логотип">
         <p class="logo-text">
-            Сайт для абитуриентов Института нефтепереработки и нефтехимии ФГБОУ ВО УГНТУ в г. Салават
+            Система выдачи справок для студентов ИНН УГНТУ в г. Саалават
         </p>
     </div>
     <div class="header-img">
@@ -23,9 +23,27 @@
 </div>
 {% endblock %}
 
-{% block main %}
+{% if user.is_authenticated %}
+    {% block main %}
 
+    {% endblock %}
+
+{% else %}
+{% block auth %}
+<div class="main">
+    <div class="main-left">
+        <h1 class="main-header">
+            Требуется авторизация
+        </h1>
+        <p class="main-text">
+            Для продолжениия работы, пожалуйста, авторизуйтесь!
+        </p>
+    </div>
+</div>
 {% endblock %}
+{% endif %}
+
+
 
 {% block footer %}
 <div class="footer">
