--- a/studentforum/templates/req/req_detail.html
+++ b/studentforum/templates/req/req_detail.html
@@ -3,6 +3,8 @@
 <div class="main-left">
     <div class="main-left-menu">
         <a href="{{req.get_absolute_url}}/statuschange" class="main-left-menu-link">Изменить статус</a>
+        <a href="{{req.get_absolute_url}}/datachange" class="main-left-menu-link">Редактировать данные</a>
+        <a href="{{req.get_absolute_url}}/ref" class="main-left-menu-link">Справка</a>  
     </div>
     <div class="main-left-content">
         <h1 class="main-header">Заявка № {{req.pk}} </h1>
